# oauth2-sandbox-rs-ts

./: README.md
backend/: .gitignore  Cargo.toml
backend/src/: aws.rs  main.rs
devops/: README.md
devops/aws/: .terraform.lock.hcl  iam.tf  main.tf  outputs.tf  s3.tf  variables.tf
devops/notebook/: requirements.txt
frontend/: package-lock.json  package.json
frontend/src/app/api/auth/[...nextauth]/: route.ts
sandbox/: Pipfile  README.md
sandbox/notebooks/: 00_Create_Delta_Tables.ipynb  01_Upload_Delta_Tables_to_S3.ipynb
